src/styles/mobile.css
@media (max-width:480px) {
    .second-right h2{
        margin-top: 80px;
    }
    .cart{
        height: 600px !important;
    }
    .card-front,.cart-back{
        height: 700px !important;
    }
    .cart-inner{
        height:700px;
    }
    .card-back{
        height: 580px;
    }
    .hero-text{
        font-size: 22px !important;
        line-height: 2rem;
    }
    #sevicess{
        padding: 20px;
    }
    #servicess>p{
        font-size: 35px !important;
    }
.all-serve{
    gap: 10px;
}
.serve-title{
    font-size: 20px;
}


    .story-card{
        padding: 0px 10px;
        width: 380px;
        height: 700px;
    }
    .story-content{
        height: 400px;
    }

    #solution-path>p{
        font-size: 40px;
    }
    .solution-cart{
        height: 300px;
    }
    .process-header>span{
        font-size: 50px;
    }
    .process-header>h2{
        font-size: 30px;
    }
    .process-header>p{
        font-size: 35px;
    }
    .card-content p{
        font-size: 35px;
        line-height: 3rem;
    }


#industries{
    padding: 10px;
}
.industries-icon>i {
        padding-left:5px;
    }

    .right{
        margin-left:-12px;
    }
    #industries>h2{
        font-size: 45px;
    }
    #industries>p{
        font-size: 30px;
    }
    .industries-card{
        width: 350px;
        height: 300px;
    }
    .right>h3{
        font-size: 30px;
    }
    .right>p{
        font-size: 28px;
    }


    .section-title>h2{
        font-size: 50px;
    }
    .section-title>p{
        font-size: 30px;
    }
    .career-content>h3{
        font-size: 40px;
    }


    .section-title>h2{
        font-size: 45px;
    }
    .job-detalis>h3{
        font-size: 35px;
    }
    .job-detalis>p{
        font-size: 30px;
    }
    .job-card button{
        width: 200px;
        padding: 2px 30px;
        font-size: 20px;
        line-height: 2rem;
    }


/* Contact Section */
.contact-wrapper {
    padding: 20px 15px;
}

.contact-left,
.contact-right {
    width: 100%;
}
.industries-card {
        width: 330px;
        height: 320px;
        margin-bottom: 40px;
    }
.section-tag {
    font-size: 26px;
    padding-right: 0;
    text-align: center;
    display: block;
}

.contact-left h2 {
    font-size: 30px;
    line-height: 40px;
    text-align: center;
}

.contact-left p {
    font-size: 16px;
    line-height: 28px;
    padding: 0;
    text-align: center;
}

.contact-form {
    width: 100%;
}

.input-row {
    display: flex;
    flex-direction: column;
    gap: 15px;
}

.form-content {
    width: 100%;
    font-size: 16px !important;
    padding: 14px;
    box-sizing: border-box;
}

.contact-form textarea {
    width: 100%;
    box-sizing: border-box;
}

.contact-form button {
    width: 100%;
    margin: 20px 0 0;
    font-size: 16px;
    padding: 14px;
}

.contact-right {
    margin-top: 40px;
    padding: 20px;
}

.contact-right h3 {
    font-size: 24px;
    text-align: center;
}

.info-box {
    display: flex;
    align-items: flex-start;
    gap: 15px;
    height: auto;
    margin-bottom: 20px;
}

.icon {
    font-size: 18px;
    height: 35px;
    width: 35px;
}

.info-box p {
    font-size: 22px;
    line-height: 24px;
    word-break: break-word;
}

.social-box h4 {
    font-size: 22px;
    text-align: center;
}

.social-icons {
    justify-content: center;
    gap: 15px;
}

.contact-right h3 {
    font-size: 36px;
}

.info-box h4 {
    font-size: 26px;
}

.social-box h4 {
    font-size: 40px;
}

.social-icons a {
    width: 45px;
    height: 45px;
    font-size: 20px;
}




.footer-section>h3 {
        font-size: 30px;
    }

     .footer-section li {
        font-size: 24px;
        padding-bottom: 5px;
    }

}

